fix: fix some final bugs